--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
-certifi==2020.6.20
-Flask==1.1.2
 numpy==1.19.2
 pymongo==3.12.1
+certifi==2021.5.30
+click==8.0.1
+dnspython==2.1.0
+Flask==2.0.1
 gunicorn==20.1.0
+importlib-metadata==4.8.1
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+typing-extensions==3.10.0.2
+Werkzeug==2.0.1
+zipp==3.5.0
