--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,5 @@ MarkupSafe==2.0.1
 typing-extensions==3.10.0.2
 Werkzeug==2.0.1
 zipp==3.5.0
-scikit-learn==0.21.3
+scipy>=0.15.1
+scikit-learn>=0.18
